# Smart-weather-clock

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Src/: CMakeLists.txt  logic_init.c  logic_init.h  types.h
Src/Core/Src/: main.c
Src/alarm/: alarm.c  alarm.h  alarm_interface.h
Src/app_control/: control.c  control.h  control_interface.h
Src/display/: display_interface.h
Src/events/: events.c  events.h
Src/hw/external_hw/: external_hw_init.c  external_hw_init.h
Src/hw/mcu_hw/: mcu_hw_init.c  mcu_hw_init.h
Src/main_state_machine/: state.h  state_machine.c  state_machine.h
Src/main_state_machine/state_alarm/: state_alarm.c  state_alarm.h
Src/main_state_machine/state_mode_selection/: state_mode_selection.c  state_mode_selection.h
Src/main_state_machine/state_set_alarm/: state_set_alarm.c  state_set_alarm.h
Src/main_state_machine/state_set_time/: state_set_time.c  state_set_time.h
Src/main_state_machine/state_weather_in/: state_weather_in.c  state_weather_in.h
Src/main_state_machine/state_weather_out/: state_weather_out.c  state_weather_out.h
Src/safe_state/: safe_state.c  safe_state.h
Src/sys_comm/: adapter_sys_comm.c  adapter_sys_comm.h  sys_comm.c  sys_comm.h  sys_comm_hw_interface.h  sys_comm_send_recv.c  sys_comm_send_recv.h  sys_comm_types.h
Src/time/: time.c  time.h  time_interface.h
Src/weather_control/: weather_sensors_control.c  weather_sensors_control.h  weather_sensors_interface.h
Src/weather_meas_state_machine/: state.h  state_machine.c  state_machine.h
Src/weather_meas_state_machine/state_run/: state_run.c  state_run.h
Src/weather_meas_state_machine/state_sleep/: state_sleep.c  state_sleep.h
cmake/: compiler_flags.cmake  toolchain-arm-gcc.cmake
pcb/main_board/: advanced_clock.kicad_pcb  advanced_clock.kicad_sch
pcb/user_interface_board/: user_interface.kicad_pcb  user_interface.kicad_sch
test/unit_test/events/: CMakeLists.txt  events_test.c  events_test_runner.c  mock_funs.c  mock_funs.h
test/unit_test/main_state_machine/: CMakeLists.txt  alarm_mock.c  alarm_mock.h  alarm_test.c  display_mock.c  display_mock.h  mode_selection_test.c  set_alarm_test.c  set_time_test.c  states_test_main.c  states_test_runner.c  time_mock.c  time_mock.h
test/unit_test/sys_comm/: CMakeLists.txt  mock_get_data.c  mock_get_data.h  sys_comm_master_req_test.c  sys_comm_send_recv_test.c  sys_comm_slave_resp_test.c  sys_comm_test_main.c  sys_comm_test_runner.c
test/unit_test/template/: CMakeLists.txt  template_test.c  template_test_runner.c
test/unit_test/unity/: CMakeLists.txt
test/unit_test/weather_control/: CMakeLists.txt  mock_sensors.c  mock_sensors.h  weather_control_test.c  (+2 more)
(+46 files in other folders)
